# langflowx

./: .gitignore  README.md  justfile  pyproject.toml
docs/dspy/: README.md
langflowx/base/: rerank.py
langflowx/components/llm_operations/: dspy.py
langflowx/components/processing/: jq.py  repair_json.py
langflowx/patches/: patche_langfuse.py
scripts/: build_frontend.sh
